Create a system design

--- a/pages/info.html
+++ b/pages/info.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/css/reset.css">
-    <link rel="stylesheet" href="../resources/css/index.css">
+    <link rel="stylesheet" href="../resources/css/basic.css">
+    <link rel="stylesheet" href="../resources/css/info.css">
     <title>Info</title>
 </head>
 
@@ -22,10 +23,12 @@
             <a href=""> Info </a>
         </nav>
       </header>
-
-    <h1 class="call"> Llamar al gatito 9999....</h1>
+    <ul class="list-info">
+        <li><a href="./design_system.html">Sistema de Diseño</a></li>
+    </ul>
     <footer>
         <p>Aprendiendo de gatitos...</p>
+        <p>Para más información llamar al 999-Gatito...</p>
     </footer>
 </body>
 
