--- a/pages/photos.html
+++ b/pages/photos.html
@@ -9,7 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../resources/css/reset.css">
-  <link rel="stylesheet" href="../resources/css/index.css">
+  <link rel="stylesheet" href="../resources/css/basic.css">
+  <link rel="stylesheet" href="../resources/css/photos.css">
   <title>Fotos</title>
 </head>
 
