Apply display flex to photos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
-  <link rel="stylesheet" href="./resources/css/basic.css">
+  <link rel="stylesheet" href="./resources/css/base.css">
   <link rel="stylesheet" href="./resources/css/index.css">
 
   <title>Gatos y personas</title>
@@ -46,7 +46,7 @@
         Los gatos hacen de una casa un hogar.
       </p>
     </article>
-
+    <p>Texto extraido de: <a href="https://www.cats.org.uk/media/1025/eg14_cats_and_people.pdf">Cats and People</a></p>
     <a href="https://www.elconfidencialdigital.com/articulo/tendencias/como-cuidar-educar-gato-claves-bienestar/20210122130259207218.html"
       class="button" target="_blank">Aprende de Michis</a>
 
