--- a/pages/photos.html
+++ b/pages/photos.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../resources/css/reset.css">
-  <link rel="stylesheet" href="../resources/css/basic.css">
+  <link rel="stylesheet" href="../resources/css/base.css">
   <link rel="stylesheet" href="../resources/css/photos.css">
   <title>Fotos</title>
 </head>
@@ -17,31 +17,36 @@
 <body>
   <header>
     <nav>
-        <a href="../index.html"><img src="../resources/images/paw.png" rel="Logo Página"></a>
-        <a href="../index.html">Inicio </a>
-        <a href=""> Fotos </a>
-        <a href="../pages/info.html"> Info </a>
+      <a href="../index.html"><img src="../resources/images/paw.png" rel="Logo Página"></a>
+      <a href="../index.html">Inicio </a>
+      <a href=""> Fotos </a>
+      <a href="../pages/info.html"> Info </a>
     </nav>
   </header>
-
-  <div class="row">
-    <div class="column">
-      <img src="../resources/images/cat1.jpg">
-      <img src="../resources/images/cat2.jpg">
-    </div>
-    <div class="column">
-      <img src="../resources/images/cat3.jpg">
-      <img src="../resources/images/cat4.jpg">
-    </div>
-    <div class="column">
-      <img src="../resources/images/cat5.jpg">
-      <img src="../resources/images/cat6.jpg">
-    </div>
-    <div class="column">
-      <img src="../resources/images/cat7.jpg">
-      <img src="../resources/images/cat8.jpg">
+  <div class="main">
+    <h2 id="expertise">Gatitos</h2>
+    <div class="row">
+      
+      <div class="column">
+        <img src="../resources/images/cat1.jpg">
+        <img src="../resources/images/cat2.jpg">
+      </div>
+      <div class="column">
+        <img src="../resources/images/cat3.jpg">
+        <img src="../resources/images/cat4.jpg">
+      </div>
+      <div class="column">
+        <img src="../resources/images/cat5.jpg">
+        <img src="../resources/images/cat6.jpg">
+      </div>
+      <div class="column">
+        <img src="../resources/images/cat7.jpg">
+        <img src="../resources/images/cat8.jpg">
+      </div>
     </div>
   </div>
+  <br></br>
+  <p>Imágenes extraidas de: <a href="https://unsplash.com/s/photos/cats">Unsplash - Cats</a></p>
   <footer>
     <p>Aprendiendo de gatitos...</p>
   </footer>
