--- a/pages/info.html
+++ b/pages/info.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/css/reset.css">
-    <link rel="stylesheet" href="../resources/css/basic.css">
+    <link rel="stylesheet" href="../resources/css/base.css">
     <link rel="stylesheet" href="../resources/css/info.css">
     <title>Info</title>
 </head>
