--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="content">
+    <div class="navbar">
       <a href="index.html"><img class="logo" src="./resources/images/paw.png" rel="Logo Página"></a>
       <!-- Nav Bar Desktop -->
       <nav class="desktop">
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Aprender</a></li>
-          <li><a href="#">Ver</a></li>
-          <li><a href="#">Escuchar</a></li>
-          <li><a href="#">Sobre</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="./pages/learn.html">Aprender</a></li>
+          <li><a href="./pages/watch.html">Ver</a></li>
+          <li><a href="./pages/listen.html">Escuchar</a></li>
+          <li><a href="./pages/about.html">Sobre</a></li>
         </ul>
       </nav>
       <!-- Nav Bar Mobile -->
       <nav class="mobile">
         <ul>
-          <li><a href="#"><img class="icon" src="./resources/icons/home_page.png" alt=""></a></li>
-          <li><a href="#"><img class="icon" src="./resources/icons/learn.png" alt=""></a></li>
-          <li><a href="#"><img class="icon" src="./resources/icons/video.png" alt=""></a></li>
-          <li><a href="#"><img class="icon" src="./resources/icons/listen.png" alt=""></a></li>
-          <li><a href="#"><img class="icon" src="./resources/icons/about.png" alt=""></a></li>
+          <li><a href="index.html"><img class="icon" src="./resources/icons/home_page.png" alt=""></a></li>
+          <li><a href="./pages/learn.html"><img class="icon" src="./resources/icons/learn.png" alt=""></a></li>
+          <li><a href="./pages/watch.html"><img class="icon" src="./resources/icons/video.png" alt=""></a></li>
+          <li><a href="./pages/listen.html"><img class="icon" src="./resources/icons/listen.png" alt=""></a></li>
+          <li><a href="./pages/about.html"><img class="icon" src="./resources/icons/about.png" alt=""></a></li>
         </ul>
       </nav>
     </div>
@@ -67,7 +67,7 @@
   </section>
 
   <footer>
-    <div class="content">
+    <div class="footer-content">
       <span class="copyright">© 2022  Aprendiendo de gatitos...</span>
       <a class="code" href="https://github.com/Nogyboy/cats_and_people" target="_blank"><img src="./resources/icons/github-mark-white.png" alt="">Source Code</a>
     </div>
